tests/ui/unknown_container_attr.stderr
error: unknown container attribute; expected `crate`, `bound`, `with`, or `shrink`
 --> tests/ui/unknown_container_attr.rs:4:14
  |
4 | #[quickcheck(bogus = "x")]
  |              ^^^^^
